2001-09-17  Earnie Boyd  <earnie@SF.net>

	* Makefile.in: Increment version.
	* include/_mingw.h: Ditto.

2001-09-10  Earnie Boyd  <earnie@SF.net>

	* dossh: Remove inadvertantly imported file.

2001-09-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* dirent.c (opendir): Use GetFileAttributes rather than stat
	to determine if input arg is dir.

2001-08-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdarg.h (va_list): Typedef as __builtin_va_list if
	__GNUC__ >= 3. 
	* include/varargs.h (va_list): Ditto.
	* include/stdio.h (va_list): Ditto.

2001-08-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (_wpgmptr): Don't declare ifndef __MSVCRT__.
	* include/stdio.h (_IORW): Change constant to 0x0080.
	(TMP_MAX): Add new define.
	(_P_tmpdir): Ditto.
	(_wP_tmpdir): Ditto.
	(L_tmpnam): Change constant to 16.

2001-06-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/malloc.h: Fix non-ANSI comment after #endif.

2001-06-11  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>

	* profile/configure.in: Make msvcrt.dll version default.
	* profile/makefile.in: Build both gcrt1.o and gcrt2.o.	
	* provile/configure: Regenerate.

2001-06-11  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/stdio.h (swscanf): Make first arugument const. 
	* include/wchar.h (swscanf): Ditto. 
	* include/tchar.h (_tfopen): New _UNICODE define.
	(_tgetenv): Ditto.
	(_tsetlocale): Ditto.

2001-06-04  Earnie Boyd  <earnie@users.sourceforge.net>

	* profile/Makefile.in (mkinstalldirs): Correct relative path.

2001-06-04  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/_mingw.h: Change version to 1.0.
	Makefile.in: Ditto.

2000-02-21  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/tchar.h: (__TEXT): Remove undef.
	(_TEXT): Ditto.
	(_T): Ditto.

Fri Feb  2 10:34:07  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/tchar.h: (__TEXT): Add private macro.
	(_TEXT): Modify definition to use __TEXT.
	(_T): Ditto.