@@ -1,3 +1,9 @@
+2001-09-19  Earnie Boyd  <earnie@SF.net>
+
+	* Makefile.in: Remove the /usr from the install target.
+	(VERSION): Increment.
+	include/_mingw.h: Ditto.
+
 2001-09-17  Earnie Boyd  <earnie@SF.net>
 
 	* Makefile.in: Increment version.
